test/tests/ChoiceMismatch.expected
ChoiceMismatch.panda:10:32: error: expected 'anonymous.A', but found 'anonymous.B'
1 error
