test/tests/ChoiceMismatch.panda
choice A {
    FOO
}

choice B {
    BAR
}

method main() {
    Console.printLine(A.FOO = B.BAR)
}
